# Bot-Framework

./: .gitignore  database_testing.py  main.py  pyproject.toml
core/: logger.py
core/bot/: message_handler.py  message_handler.py.bak  telegram_bot.py
core/bot/handlers/: __init__.py  admin_commands.py  command_registry.py  message_handler.py  plugin_handler.py  system_commands.py
core/bot_authuntcator/: access_control.py  admin_tools.py  role_manager.py  user_manager.py
core/config/: config.py
core/database/: database_manager.py
core/plugins/: __init__.py  plugin_base.py  plugin_loader.py  plugin_manager.py  plugin_registry.py
core/utils/: assign_role.py  database_viewer.py  utils_core.py
plugins/llm/: audio_handler.py  gemini_llm.py  image_handler.py  llm_base.py  llm_manager.py  openai_llm.py  plugin.py
plugins/weather/: __init__.py  plugin.py  weather_api.py  weather_plugin.py
