[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Amr Kahla",email = "amr.kahla@contellect.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "openai (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
